--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,13 @@ html, body {
   padding: 0;
 }
 
+p {
+    font-size: 14px;
+    font-weight: 300;
+}
+
 #avatar {
   border-radius: 50%;
-  box-shadow: 5 px 10px inset;
   height: 200px;
   width: 200px;
 }
@@ -22,23 +26,25 @@ div {
 }
 
 nav li a {
-  border: 1px solid black;
-  color: black;
-  padding: 5px 10px;
+  color: rgba(0, 0, 0, 0.6);
+  font-family: "Raleway", sans-serif;
   text-decoration: none;
   text-transform: uppercase;
 }
 
 nav li a:hover {
-  border: 1px solid blue;
   box-shadow: 0px 0px 10px 1px blue;
   color: blue;
 }
 
 nav {
+  display:flex;
+  justify-content: space-around;
   position: fixed;
-  background-color: white;
+  background-color: #ccd5d5;
+  /*background-color: #f6f4f5;*/
   width: 100%;
+  box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .nav-links {
@@ -76,6 +82,7 @@ li {
 }
 
 #projects {
+  margin-top: -200px;
 }
 
 #contact {
@@ -89,6 +96,10 @@ footer {
   width: 100%;
   background-image: url("images/forest-footer.png");
   background-size: cover;
+}
+
+footer p {
+  font-size: 12px;
 }
 
 h1, h2, h3 {
@@ -117,4 +128,66 @@ p {
 
 .sm-links {
   padding-top: 70px;
+}
+
+.icon {
+  width: 24px;
+  margin-bottom: -7px;
+  margin-right: 5px;
+  opacity: 0.6;
+}
+
+.attribution {
+  font-size: 10px;
+  color: white;
+  text-shadow: 1px 1px 2px #001b1f;
+}
+
+.attribution a {
+  color: #809888;
+}
+
+.attribution a:hover {
+  color: white;
+}
+
+button {
+  border: none;
+  border-radius: 20px;
+  background-color: #003131;
+  vertical-align: middle;
+  padding: 4px 7px 8px 5px;
+  text-transform: uppercase;
+  font-family: "Raleway", sans-serif;
+  color: #cfdedc;
+}
+
+button .icon {
+  border-radius: 20px;
+  background-color: #6f8977;
+  padding: 1px;
+}
+
+button:hover {
+  background-color: #2b5650;
+  cursor: pointer;
+} 
+
+nav img {
+  height: 40px;
+  border-radius: 30px;
+  margin-top: 5px;
+}
+
+nav span {
+  display: flex;
+}
+
+nav p {
+  margin-left: 10px;
+  margin-top: 20px;
+  font-family: "Raleway", sans-serif;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 300;
 }
