--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,25 @@ html, body {
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
+
+a {
+    position: relative;
+}
+
+a::before {
+    content: '';
+    background-color: lightgrey;
+    position: absolute;
+    left: -3px;
+    bottom: 3px;
+    right: -3px;
+    /*width: 100%; */
+    height: 5px;
+    z-index: -1;
+    transition: all 0.5s ease-in-out;
+  }
+  
+  a:hover::before {
+    bottom: 0px;
+    height: 100%;
+  }
