--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@ html, body {
     scroll-behavior: smooth;
 }
 
-a {
+a.link {
     position: relative;
 }
 
-a::before {
+a.link::before {
     content: '';
     background-color: lightgrey;
     position: absolute;
@@ -32,7 +32,7 @@ a::before {
     transition: all 0.5s ease-in-out;
   }
   
-  a:hover::before {
+  a.link:hover::before {
     bottom: 0px;
     height: 100%;
   }
