--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,15 @@
 }
 
 html, body {
+    color: #27272a;
     width: 100%;
     height: 100%;
     overflow-x: hidden;
     scroll-behavior: smooth;
+}
+
+a {
+    display: inline-block;
 }
 
 a.link {
@@ -29,7 +34,7 @@ a.link::before {
     /*width: 100%; */
     height: 5px;
     z-index: -1;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.4s ease-in-out;
   }
   
   a.link:hover::before {
