Style hover effect on navbar links

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ a.link {
 
 a.link::before {
     content: '';
-    background-color: lightgrey;
+    background-color: lightgray;
     position: absolute;
     left: -3px;
     bottom: 3px;
@@ -39,4 +39,13 @@ a.link::before {
   a.link:hover::before {
     bottom: 0px;
     height: 100%;
+  }
+
+  a.navlink {
+    padding: 0.4rem 0.7rem;
+    border: 1px solid transparent;
+  }
+
+  a.navlink:hover {
+    border: 1px solid black;
   }
