--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,6 @@ a.link::before {
     bottom: 0px;
     height: 100%;
   }
-  a:link:hover::after {
+  a.link:hover::after {
     color: white;
   }
